# ESP_IDF_sample_project

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  ESP32_S3_main.cpp  conf.h  esp32_s3_main.h  idf_component.yml  main.cpp
main/BT_HID_host/: bt.hpp  bt_hid_host_main.c
main/OTA/: OTA.cpp
main/SDCARD/: sdcard.cpp  sdcard.h
main/UI/: NimBLE_mouse.cpp  UI.cpp  UI.h  bt.cpp  bt.hpp  hid_host.c  hid_host.h  http_task.cpp  msc_main.c  nim_bt.txt  sdcard.cpp  sdcard.hpp  setting_page.cpp  time_page.cpp
main/disp/: hal_disp.hpp
main/game/airplane_shooting_project/: fly.c  flygame.c  flygame.h
main/game/brickbreaker_project/: ballgame.c  ballgame.h
main/game/cubegame/: cubegame.c  cubegame.h
main/game/pvz_project/: pvz.c  pvz.h
main/hal_lvgl/: CTP_driver.hpp  NotoSansSC_Medium_3500.c  hal_disp.hpp  hal_lvgl.cpp  hal_lvgl.hpp
main/lvgl/: hal_lvgl.hpp
main/tasks/audio_task/: audio_task.c  audio_task.h
main/tasks/wifi_task/: wifi_service.c  wifi_service.h
